feat: implementa registro de técnicos com validação de credenciais do Demandanet e endpoints públicos e internos